# hqc-py

./: README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/: __init__.py
src/hqc_py/: __init__.py  default_parameters.py  hqc.py
tests/: test_hqc.py
